@@ -5,7 +5,11 @@ package com.daml.ledger.javaapi.data;
 
 import com.daml.ledger.api.v1.EventOuterClass;
 import com.google.protobuf.StringValue;
+import com.google.rpc.Status;
 import java.util.*;
+import java.util.function.BiFunction;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.checkerframework.checker.nullness.qual.NonNull;
 
 public final class CreatedEvent implements Event, TreeEvent {
@@ -19,6 +23,10 @@ public final class CreatedEvent implements Event, TreeEvent {
   private final String contractId;
 
   private final DamlRecord arguments;
+
+  private final @NonNull Map<@NonNull Identifier, @NonNull DamlRecord> interfaceViews;
+
+  private final @NonNull Map<@NonNull Identifier, @NonNull Status> failedInterfaceViews;
 
   private final Optional<String> agreementText;
 
@@ -34,19 +42,52 @@ public final class CreatedEvent implements Event, TreeEvent {
       @NonNull Identifier templateId,
       @NonNull String contractId,
       @NonNull DamlRecord arguments,
+      @NonNull Map<@NonNull Identifier, @NonNull DamlRecord> interfaceViews,
+      @NonNull Map<@NonNull Identifier, com.google.rpc.@NonNull Status> failedInterfaceViews,
       @NonNull Optional<String> agreementText,
       @NonNull Optional<Value> contractKey,
       @NonNull Collection<@NonNull String> signatories,
       @NonNull Collection<@NonNull String> observers) {
-    this.witnessParties = Collections.unmodifiableList(new ArrayList<>(witnessParties));
+    this.witnessParties = List.copyOf(witnessParties);
     this.eventId = eventId;
     this.templateId = templateId;
     this.contractId = contractId;
     this.arguments = arguments;
+    this.interfaceViews = Map.copyOf(interfaceViews);
+    this.failedInterfaceViews = Map.copyOf(failedInterfaceViews);
     this.agreementText = agreementText;
     this.contractKey = contractKey;
-    this.signatories = Collections.unmodifiableSet(new HashSet<>(signatories));
-    this.observers = Collections.unmodifiableSet(new HashSet<>(observers));
+    this.signatories = Set.copyOf(signatories);
+    this.observers = Set.copyOf(observers);
+  }
+
+  /**
+   * @deprecated Pass {@code interfaceViews} and {@code failedInterfaceViews} arguments; empty maps
+   *     are reasonable defaults. Since Daml 2.4.0
+   */
+  @Deprecated
+  public CreatedEvent(
+      @NonNull List<@NonNull String> witnessParties,
+      @NonNull String eventId,
+      @NonNull Identifier templateId,
+      @NonNull String contractId,
+      @NonNull DamlRecord arguments,
+      @NonNull Optional<String> agreementText,
+      @NonNull Optional<Value> contractKey,
+      @NonNull Collection<@NonNull String> signatories,
+      @NonNull Collection<@NonNull String> observers) {
+    this(
+        witnessParties,
+        eventId,
+        templateId,
+        contractId,
+        arguments,
+        Collections.emptyMap(),
+        Collections.emptyMap(),
+        agreementText,
+        contractKey,
+        signatories,
+        observers);
   }
 
   @NonNull
@@ -79,6 +120,16 @@ public final class CreatedEvent implements Event, TreeEvent {
   }
 
   @NonNull
+  public Map<@NonNull Identifier, @NonNull DamlRecord> getInterfaceViews() {
+    return interfaceViews;
+  }
+
+  @NonNull
+  public Map<@NonNull Identifier, @NonNull Status> getFailedInterfaceViews() {
+    return failedInterfaceViews;
+  }
+
+  @NonNull
   public Optional<String> getAgreementText() {
     return agreementText;
   }
@@ -108,6 +159,8 @@ public final class CreatedEvent implements Event, TreeEvent {
         && Objects.equals(templateId, that.templateId)
         && Objects.equals(contractId, that.contractId)
         && Objects.equals(arguments, that.arguments)
+        && Objects.equals(interfaceViews, that.interfaceViews)
+        && Objects.equals(failedInterfaceViews, that.failedInterfaceViews)
         && Objects.equals(agreementText, that.agreementText)
         && Objects.equals(contractKey, that.contractKey)
         && Objects.equals(signatories, that.signatories)
@@ -122,6 +175,8 @@ public final class CreatedEvent implements Event, TreeEvent {
         templateId,
         contractId,
         arguments,
+        interfaceViews,
+        failedInterfaceViews,
         agreementText,
         contractKey,
         signatories,
@@ -143,10 +198,13 @@ public final class CreatedEvent implements Event, TreeEvent {
         + '\''
         + ", arguments="
         + arguments
+        + ", interfaceViews="
+        + interfaceViews
+        + ", failedInterfaceViews="
+        + failedInterfaceViews
         + ", agreementText='"
         + agreementText
-        + '\''
-        + ", contractKey="
+        + "', contractKey="
         + contractKey
         + ", signatories="
         + signatories
@@ -160,6 +218,13 @@ public final class CreatedEvent implements Event, TreeEvent {
         EventOuterClass.CreatedEvent.newBuilder()
             .setContractId(this.getContractId())
             .setCreateArguments(this.getArguments().toProtoRecord())
+            .addAllInterfaceViews(
+                Stream.concat(
+                        toProtoInterfaceViews(
+                            interfaceViews, (b, dr) -> b.setViewValue(dr.toProtoRecord())),
+                        toProtoInterfaceViews(
+                            failedInterfaceViews, (b, status) -> b.setViewStatus(status)))
+                    .collect(Collectors.toUnmodifiableList()))
             .setEventId(this.getEventId())
             .setTemplateId(this.getTemplateId().toProto())
             .addAllWitnessParties(this.getWitnessParties())
@@ -170,13 +235,40 @@ public final class CreatedEvent implements Event, TreeEvent {
     return builder.build();
   }
 
+  private static <V> Stream<EventOuterClass.InterfaceView> toProtoInterfaceViews(
+      Map<Identifier, V> views,
+      BiFunction<EventOuterClass.InterfaceView.Builder, V, EventOuterClass.InterfaceView.Builder>
+          addV) {
+    return views.entrySet().stream()
+        .map(
+            e ->
+                addV.apply(
+                        EventOuterClass.InterfaceView.newBuilder()
+                            .setInterfaceId(e.getKey().toProto()),
+                        e.getValue())
+                    .build());
+  }
+
   public static CreatedEvent fromProto(EventOuterClass.CreatedEvent createdEvent) {
+    var splitInterfaceViews =
+        createdEvent.getInterfaceViewsList().stream()
+            .collect(Collectors.partitioningBy(EventOuterClass.InterfaceView::hasViewValue));
     return new CreatedEvent(
         createdEvent.getWitnessPartiesList(),
         createdEvent.getEventId(),
         Identifier.fromProto(createdEvent.getTemplateId()),
         createdEvent.getContractId(),
         DamlRecord.fromProto(createdEvent.getCreateArguments()),
+        splitInterfaceViews.get(true).stream()
+            .collect(
+                Collectors.toUnmodifiableMap(
+                    iv -> Identifier.fromProto(iv.getInterfaceId()),
+                    iv -> DamlRecord.fromProto(iv.getViewValue()))),
+        splitInterfaceViews.get(false).stream()
+            .collect(
+                Collectors.toUnmodifiableMap(
+                    iv -> Identifier.fromProto(iv.getInterfaceId()),
+                    EventOuterClass.InterfaceView::getViewStatus)),
         createdEvent.hasAgreementText()
             ? Optional.of(createdEvent.getAgreementText().getValue())
             : Optional.empty(),
